--- a/assignments/coding-assignment-2.qmd
+++ b/assignments/coding-assignment-2.qmd
@@ -17,17 +17,17 @@ Here is a setup code chunk. You can load all of your packages here or as you go 
 Please refrain from *installing* any packages in your code chunks because this will also install them every time the code chunk is run or your document is rendered. This may not be desirable for you or whoever is looking at or running your code (e.g. me).
 :::
 
-## Step 1: Download data from V-Dem (20pts)
+## Step 1: Download data from V-Dem (10pts)
 
-*Use the V-Dem [codebook](https://www.v-dem.net/data/reference-documents/) or the `searchdem()` function in `vdemlite` to identify one measure of democracy and one indicator related to women's empowerment (or two measures of women's empowerment). Now use `fetchdem()` to download the most recent 25 years or so of data for your analysis for all countries in the dataset. Make sure to load the packages that you need and `glimpse()` the data or `View()` it to make sure that it downloaded properly.* 
+*Use the V-Dem [codebook](https://www.v-dem.net/data/reference-documents/) or the `searchdem()` function in `vdemlite` to identify at least two measures of women's empowerment (make at least one something that we did not use in class). Also retrieve the six-fold regional classification that we used in class and a general measure of democracy (like the polyarchy or libdem score). Now use `fetchdem()` to download the most recent 25 years or so of data for your analysis for all countries in the dataset. Make sure to load the packages that you need and `glimpse()` the data or `View()` it to make sure that it downloaded properly.* 
 
 ```{r}
 
 ```
 
-## Step 2: Download data from the World Bank (20 pts)
+## Step 2: Download data from the World Bank (10 pts)
 
-*Next, download the variable on women's represenation that we used in Module 1.2 ("SG.GEN.PARL.ZS") and at least one additional measure related to women's empowerment. Go to the [WDI](https://databank.worldbank.org/source/world-development-indicators) site the wb_search() function to identify relevant variables. Download data for the same time period as you did for the V-Dem data for all countries.* 
+*Next, download the variable on women's representation that we used in Module 1.2 ("SG.GEN.PARL.ZS"), at least one additional measure related to women's empowerment and a measure of wealth (GDP per capita). Go to the [WDI](https://databank.worldbank.org/source/world-development-indicators) site the wb_search() function to identify relevant variables. Download data for the same time period as you did for the V-Dem data for all countries. Ensure that at least one of the variables you select is different from the ones we explored in class.* 
 
 ::: {.callout-important}
 Try to make sure you download indicators with enough data to conduct your analysis. You won't get great results if there are too many NAs. 
@@ -37,7 +37,21 @@ Try to make sure you download indicators with enough data to conduct your analys
 
 ```
 
-## Step 3: Merge the data (20 pts)
+## Step 3: Clean the data (20 pts)
+
+*Now clean the data. Drop any columns that you will not need for the analysis. Filter out any years that do not match between the two data frames. Transform the region codes into actual region names. Etc.*
+
+```{r}
+# clean v-dem data
+
+```
+
+```{r}
+# clean wb data
+
+```
+
+## Step 4: Merge the data (20 pts)
 
 *Now add country codes using the `countrycode` package and merge the data using `left_join()`.* 
 
@@ -45,9 +59,9 @@ Try to make sure you download indicators with enough data to conduct your analys
 
 ```
 
-## Step 4: Summarize your combined data set (20 pts)
+## Step 5: Summarize your combined data set (20 pts)
 
-*Use `group_by()`, `summarize()` and `arrange()` to glean insights about your data. For example, how do regions compare on mean values of women's representation and how do these values relate to the values of other variables in your data set? Which countries stand out in terms of women's representation?* 
+*Use `group_by()`, `summarize()` and `arrange()` to glean preliminary insights about your data. For example, how do regions compare on mean values of women's representation and how do these values relate to the values of other variables in your data set? Which countries stand out in terms of women's representation?* 
 
 ```{r}
 # Regional summary
@@ -59,17 +73,20 @@ Try to make sure you download indicators with enough data to conduct your analys
 
 ```
 
-## Step 5: Interpret your data (10 pts)
-
-*Write a paragraph or so relating your insights to the Norris reading about electoral reform and women's representation. Picking a handful of country cases from your data, how does your summary of gender and democracy variables relate to the level of female representation in a country? How would you relate these findings to Norris's argument about the importance of an inclusive democracy?* 
-
 ::: {.callout-warning}
 Don't write your paragraphs or any interpretation or analysis in a code chunk. Use markdown text. Quarto is designed to be a literate programming tool, so you can write your analysis in markdown text and include code chunks when necessary to support your argument.
 :::
 
-## Step 6: Pivot WB Data (10 pts.)
+## Step 6: Visualize and interpret your data (20 pts)
 
-*Sometimes our data does not come in the format that we need to have it in for our analysis. Demonstrate that you know how to pivot data from wide to long form using the `world_bank_pop` data frame that comes with the `tidyr` package. Then pivot again (wider this time) to get the data into tidy format.*
+*Using the data from step 5, create an appropriate visualization that either shows differences in levels of women's empowerment across countries or regions or demonstrates the relationship between women's empowerment and a potential explanatory variable like welath or democracy. Then write a few lines about the patterns that your visualization uncovers.*
+
+
+::: {.callout-note}
+You can relate your analysis to the assigned Norris reading that explores reasons for variations in women's empowerment but this is not required.
+:::
+
+## Step 6: Pivot WB Data (10 pts.)
 
 ```{r}
 
@@ -77,10 +94,15 @@ Don't write your paragraphs or any interpretation or analysis in a code chunk. U
 
 ## Extra Credit (3 pts.)
 
-*Following the example that we did in class, download some messy data from the World Development Indicators website and wrangle it so that it is a tidy data frame. Be sure to download more than one data variable and don't forget to use backticks (``) when dealing with unconventional variable names.*
+*Sometimes our data does not come in the format that we need to have it in for our analysis. Demonstrate that you know how to pivot data from wide to long form using the `world_bank_pop` data frame that comes with the `tidyr` package. Then pivot again (wider this time) to get the data into tidy format.*
 
 **Now render the document to make sure everything runs and to produce a final HTML document!**
 
 ## Submission
 
 *After rendering your document, export your project folder and submit it on Blackboard. You will find the link to the Coding Assignment one submission portal under the Assignments link. There is a screen capture video in the Discord server that will help you understand how to do this.*
+
+::: {callout-important}
+# Deadline Extension
+I am going to be moving this weekend and may not be able to respond to questions right away (I may not even have an internet connection). Therefore I am extending the deadline to Tuesday, March 4 at 11:59 PM.
+:::
